// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CCard customize 1`] = `
<div>
  <div
    class="card bg-primary text-warning bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CCard component 1`] = `
<div>
  <div
    class="card"
  >
    Test
  </div>
</div>
`;
